chore: remove deprecated Class#newInstance() method (#143)